--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,20 @@
 @font-face {
     font-family: 'BricolageGrotesque';
-    src: url('./assets/fonts/BricolageGrotesque-Regular.ttf') format('truetype');
+    src: url('../fonts/BricolageGrotesque-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
   }
   
   @font-face {
     font-family: 'BricolageGrotesque';
-    src: url('./assets/fonts/BricolageGrotesque-Bold.ttf') format('truetype');
+    src: url('../fonts/BricolageGrotesque-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
   }
   
   @font-face {
     font-family: 'BricolageGrotesque';
-    src: url('./assets/fonts/BricolageGrotesque-Italic.ttf') format('truetype');
+    src: url('../fonts/BricolageGrotesque-Italic.ttf') format('truetype');
     font-weight: 400;
     font-style: italic;
   }
